--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -42,5 +42,7 @@ jobs:
         run: |
           cd src
           verilator -Wall --lint-only PairTripleDetector.v
-          iverilog -Wall -g2012 -o PairTripleDetector_test PairTripleDetector_test.v
+          iverilog -Wall -g2012 -o PairTripleDetector_test \
+            PairTripleDetector_test.v \
+            PairTripleDetector.v \
           ./PairTripleDetector_test
