--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -45,4 +45,5 @@ jobs:
           iverilog -Wall -g2012 -o PairTripleDetector_test \
             PairTripleDetector_test.v \
             PairTripleDetector.v \
-          ./PairTripleDetector_test
+          ./PairTripleDetector_test +verbose=-1 \
+          grep "*** PASSED ***
