--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -44,6 +44,6 @@ jobs:
           verilator -Wall --lint-only PairTripleDetector.v
           iverilog -Wall -g2012 -o PairTripleDetector_test \
             PairTripleDetector_test.v \
-            PairTripleDetector.v \
-          ./PairTripleDetector_test +verbose=-1 \
+            PairTripleDetector.v
+          ./PairTripleDetector_test +verbose=-1
           grep "*** PASSED ***
